--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               class="p-3 opacity-80 hover:opacity-100 cursor-pointer"
               id="randomTrack"
             >
-              <input type="hidden" value="true" />
+              <input type="hidden" id="randomValue" value="true" />
               <i class="fa fa-random text-2xl"></i>
             </div>
 
