--- a/index.html
+++ b/index.html
@@ -76,11 +76,20 @@
                   0 Followers
                 </li>
                 <button
-                  id="toggle-favs-btn"
+                  id="show-saved-btn"
                   class="hover:bg-green-500 hover:text-white transition-all w-full"
                 >
                   <li id="toggle-favs-text" class="block px-4 py-2">
                     Saved Concerts
+                  </li>
+                </button>
+                <button
+                  id="show-all-btn"
+                  class="hover:bg-green-500 hover:text-white transition-all w-full"
+                  hidden
+                >
+                  <li id="toggle-favs-text" class="block px-4 py-2">
+                    Show All Concerts
                   </li>
                 </button>
                 <li>
@@ -186,16 +195,16 @@
 
     <script>
       async function playSong(uri) {
-        const accessToken = localStorage.getItem("access_token");
+        const accessToken = localStorage.getItem('access_token');
 
         if (!Array.isArray(uri)) {
           uri = [uri];
         }
 
         const response = await fetch(
-          "https://api.spotify.com/v1/me/player/play",
+          'https://api.spotify.com/v1/me/player/play',
           {
-            method: "PUT",
+            method: 'PUT',
             body: JSON.stringify({
               offset: {
                 position: 0,
@@ -203,7 +212,7 @@
               uris: uri,
             }),
             headers: new Headers({
-              Authorization: "Bearer " + accessToken,
+              Authorization: 'Bearer ' + accessToken,
             }),
           }
         );
@@ -211,15 +220,15 @@
 
       // Get playlist tracks
       async function getTracks(playlistId, type) {
-        const accessToken = localStorage.getItem("access_token");
+        const accessToken = localStorage.getItem('access_token');
 
         const response = await fetch(
           `https://api.spotify.com/v1/${
-            type == "album" ? "albums" : "playlists"
+            type == 'album' ? 'albums' : 'playlists'
           }/${playlistId}/tracks`,
           {
             headers: {
-              Authorization: "Bearer " + accessToken,
+              Authorization: 'Bearer ' + accessToken,
             },
           }
         );
@@ -229,12 +238,12 @@
 
       async function playAlbum(playlistId, type) {
         let uri = [];
-        const accessToken = localStorage.getItem("access_token");
+        const accessToken = localStorage.getItem('access_token');
 
         const tracks = await getTracks(playlistId, type);
 
         tracks.items.forEach((element) => {
-          if (type == "playlists") {
+          if (type == 'playlists') {
             uri.push(element.track.uri);
           } else {
             uri.push(element.uri);
