Adjusting size of events section, impemeting dark mode for events

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <!-- Events -->
         <div
           id="events-container"
-          class="flex flex-col items-center justify-center overflow-auto h-96"
+          class="flex flex-col items-center overflow-auto h-56"
         ></div>
         <!------------>
       </div>
