--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       >
         <div class="flex flex-row justify-between">
           <!-- Nav Bar -->
-          <div class="mx-5">
+          <div class="mx-5" id="search-container">
             <div
               class="rounded-3xl bg-white dark:bg-neutral-400 dark:bg-opacity-60 px-3 border-[1px] border-gray-500 border-solid w-40"
             >
@@ -71,10 +71,12 @@
                 <button id="login-button" type="button">
                   <li class="block px-4 py-2">Login</li>
                 </button>
-                <li class="block px-4 py-2" id="profile-name"></li>
-                <li class="block px-4 py-2" id="profile-followers">
-                  0 Followers
-                </li>
+                <ul id="profile-info">
+                  <li class="block px-4 py-2" id="profile-name"></li>
+                  <li class="block px-4 py-2" id="profile-followers">
+                    0 Followers
+                  </li>
+                </ul>
                 <button
                   id="show-saved-btn"
                   class="hover:bg-green-500 hover:text-white transition-all w-full"
@@ -92,7 +94,7 @@
                     Show All Concerts
                   </li>
                 </button>
-                <li>
+                <li id="logout-btn">
                   <a
                     id="logout-button"
                     href="#"
@@ -104,92 +106,91 @@
             </div>
           </div>
         </div>
-
-        <!-- Media controls -->
-        <div class="flex items-center flex-col justify-center">
-          <img id="current-song-img" class="w-1/4 aspect-sqaure m-4" />
-        </div>
-
-        <div class="flex items-center w-full justify-around">
-          <div class="flex p-3 justify-end w-1/6 dark:text-white">
-            <span id="currTime">00:00</span> / <span id="endTime">00:00</span>
+        <div id="media-container">
+          <!-- Media controls -->
+          <div class="flex items-center flex-col justify-center">
+            <img id="current-song-img" class="w-1/4 aspect-sqaure m-4" />
           </div>
-          <div class="flex flex-row items-center justify-center">
-            <div
-              class="p-3 opacity-80 hover:opacity-100 cursor-pointer"
-              id="randomTrack"
-            >
-              <input type="hidden" id="randomValue" value="true" />
-              <i class="fa fa-random text-2xl dark:text-white"></i>
-            </div>
 
-            <div
-              class="p-3 opacity-80 hover:opacity-100 cursor-pointer"
-              id="prevTrack"
-            >
-              <i class="fa fa-step-backward text-2xl dark:text-white"></i>
+          <div class="flex items-center w-full justify-around mb-1.5">
+            <div class="flex text-sm justify-end w-1/6 dark:text-white">
+              <span id="currTime">00:00</span> / <span id="endTime">00:00</span>
             </div>
-
-            <div class="p-3 cursor-pointer active:scale-90 transition-all">
-              <i
-                id="togglePlay"
-                class="fa fa-play-circle text-5xl dark:text-white"
-              ></i>
-            </div>
-
-            <div
-              class="p-3 opacity-80 hover:opacity-100 cursor-pointer"
-              id="nextTrack"
-            >
-              <i class="fa fa-step-forward text-2xl dark:text-white"></i>
-            </div>
-
-            <div
-              class="p-3 opacity-80 hover:opacity-100 cursor-pointer"
-              id="repeatTrack"
-            >
-              <input type="hidden" id="repeatValue" value="false" />
-              <i class="fa fa-repeat text-2xl dark:text-white"></i>
-            </div>
-          </div>
-          <div class="flex items-center justify-center w-1/6">
-            <label class="relative inline-flex items-center cursor-pointer">
-              <input
-                id="concertToggle"
-                type="checkbox"
-                value=""
-                class="sr-only peer"
-                checked
-              />
+            <div class="flex flex-row items-center justify-center">
               <div
-                class="w-9 h-5 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-green-500"
-              ></div>
-            </label>
-          </div>
-        </div>
-        <div class="flex flex-col items-center justify-center mb-5">
-          <div class="flex flex-row">
-            <div class="dark:text-white" id="current-song-name">Track Name</div>
-            <span class="dark:text-white">&nbsp;-&nbsp;</span>
-            <div class="dark:text-white" id="current-song-artist">
-              Track Artist
+                class="p-2 opacity-80 hover:opacity-100 cursor-pointer"
+                id="randomTrack"
+              >
+                <input type="hidden" id="randomValue" value="true" />
+                <i class="fa fa-random text-2xl dark:text-white"></i>
+              </div>
+
+              <div
+                class="p-2 opacity-80 hover:opacity-100 cursor-pointer"
+                id="prevTrack"
+              >
+                <i class="fa fa-step-backward text-2xl dark:text-white"></i>
+              </div>
+
+              <div class="p-2 cursor-pointer active:scale-90 transition-all">
+                <i
+                  id="togglePlay"
+                  class="fa fa-play-circle text-5xl dark:text-white"
+                ></i>
+              </div>
+
+              <div
+                class="p-2 opacity-80 hover:opacity-100 cursor-pointer"
+                id="nextTrack"
+              >
+                <i class="fa fa-step-forward text-2xl dark:text-white"></i>
+              </div>
+
+              <div
+                class="p-2 opacity-80 hover:opacity-100 cursor-pointer"
+                id="repeatTrack"
+              >
+                <input type="hidden" id="repeatValue" value="false" />
+                <i class="fa fa-repeat text-2xl dark:text-white"></i>
+              </div>
+            </div>
+            <div class="flex items-center justify-center w-1/6">
+              <label class="relative inline-flex items-center cursor-pointer">
+                <input
+                  id="concertToggle"
+                  type="checkbox"
+                  value=""
+                  class="sr-only peer"
+                  checked
+                />
+                <div
+                  class="w-9 h-5 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-green-500"
+                ></div>
+              </label>
             </div>
           </div>
-          <meter
-            id="song-duration"
-            min="0"
-            max="100"
-            value=""
-            class="w-3/4"
-          ></meter>
-        </div>
+          <div class="flex flex-col items-center justify-center mb-3">
+            <div class="flex flex-row">
+              <div class="dark:text-white" id="current-song-name"></div>
+              <span class="dark:text-white">&nbsp;-&nbsp;</span>
+              <div class="dark:text-white" id="current-song-artist"></div>
+            </div>
+            <meter
+              id="song-duration"
+              min="0"
+              max="100"
+              value=""
+              class="w-3/4"
+            ></meter>
+          </div>
 
-        <!-- Events -->
-        <div
-          id="events-container"
-          class="flex flex-col items-center overflow-auto h-56"
-        ></div>
-        <!------------>
+          <!-- Events -->
+          <div
+            id="events-container"
+            class="flex flex-col items-center overflow-auto h-56"
+          ></div>
+          <!------------>
+        </div>
       </div>
     </div>
 
