--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
                 <li class="block px-4 py-2" id="profile-followers">
                   0 Followers
                 </li>
-                </ul>
                 <button
                   id="show-saved-btn"
                   class="hover:bg-green-500 hover:text-white transition-all w-full"
@@ -192,16 +191,16 @@
 
     <script>
       async function playSong(uri) {
-        const accessToken = localStorage.getItem('access_token');
+        const accessToken = localStorage.getItem("access_token");
 
         if (!Array.isArray(uri)) {
           uri = [uri];
         }
 
         const response = await fetch(
-          'https://api.spotify.com/v1/me/player/play',
+          "https://api.spotify.com/v1/me/player/play",
           {
-            method: 'PUT',
+            method: "PUT",
             body: JSON.stringify({
               offset: {
                 position: 0,
@@ -209,7 +208,7 @@
               uris: uri,
             }),
             headers: new Headers({
-              Authorization: 'Bearer ' + accessToken,
+              Authorization: "Bearer " + accessToken,
             }),
           }
         );
@@ -217,15 +216,15 @@
 
       // Get playlist tracks
       async function getTracks(playlistId, type) {
-        const accessToken = localStorage.getItem('access_token');
+        const accessToken = localStorage.getItem("access_token");
 
         const response = await fetch(
           `https://api.spotify.com/v1/${
-            type == 'album' ? 'albums' : 'playlists'
+            type == "album" ? "albums" : "playlists"
           }/${playlistId}/tracks`,
           {
             headers: {
-              Authorization: 'Bearer ' + accessToken,
+              Authorization: "Bearer " + accessToken,
             },
           }
         );
@@ -235,12 +234,12 @@
 
       async function playAlbum(playlistId, type) {
         let uri = [];
-        const accessToken = localStorage.getItem('access_token');
+        const accessToken = localStorage.getItem("access_token");
 
         const tracks = await getTracks(playlistId, type);
 
         tracks.items.forEach((element) => {
-          if (type == 'playlists') {
+          if (type == "playlists") {
             uri.push(element.track.uri);
           } else {
             uri.push(element.uri);
