--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <title>Spotify Chrome Extension</title>
     <script type="module" src="./scripts/app.js"></script>
     <link rel="stylesheet" href="./styles/style.css" />
-    <script
-      src="https://kit.fontawesome.com/e2de3a3f6a.js"
-      crossorigin="anonymous"
-    ></script>
+    <link
+      rel="stylesheet"
+      href="./node_modules/@fortawesome/fontawesome-free/css/all.css"
+    />
   </head>
 
   <body>
     <!-- Player Container -->
-    <div class="flex justify-center">
+    <div
+      class="border-solid border-gray-300 bg-gray-300 dark:border-neutral-700 dark:bg-neutral-700 border-[5px] w-fit"
+    >
       <div
         id="player-container"
-        class="border border-solid border-gray-300 bg-white dark:bg-neutral-900 p-30 rounded-lg shadow-lg p-5"
+        class="dark:bg-neutral-900 bg-white rounded-lg p-5"
       >
         <div class="flex flex-row justify-between">
           <!-- Nav Bar -->
@@ -27,14 +29,14 @@
             >
               <i class="fa-solid fa-magnifying-glass pe-2 dark:text-white"></i>
               <input
-                class="outline-none w-24 dark:bg-transparent dark:text-white"
+                class="outline-none w-24 dark:bg-transparent dark:text-white placeholder-gray-200"
                 placeholder="Search"
                 id="song-search"
               />
             </div>
             <div id="search-result" class="absolute z-50"></div>
           </div>
-          <div class="mx-5">
+          <div class="mx-5 flex">
             <button id="darkToggle">
               <i class="fa-solid fa-moon mx-3 dark:text-white"></i>
             </button>
@@ -188,66 +190,5 @@
         </div>
       </div>
     </div>
-
-    <script>
-      async function playSong(uri) {
-        const accessToken = localStorage.getItem("access_token");
-
-        if (!Array.isArray(uri)) {
-          uri = [uri];
-        }
-
-        const response = await fetch(
-          "https://api.spotify.com/v1/me/player/play",
-          {
-            method: "PUT",
-            body: JSON.stringify({
-              offset: {
-                position: 0,
-              },
-              uris: uri,
-            }),
-            headers: new Headers({
-              Authorization: "Bearer " + accessToken,
-            }),
-          }
-        );
-      }
-
-      // Get playlist tracks
-      async function getTracks(playlistId, type) {
-        const accessToken = localStorage.getItem("access_token");
-
-        const response = await fetch(
-          `https://api.spotify.com/v1/${
-            type == "album" ? "albums" : "playlists"
-          }/${playlistId}/tracks`,
-          {
-            headers: {
-              Authorization: "Bearer " + accessToken,
-            },
-          }
-        );
-
-        return await response.json();
-      }
-
-      async function playAlbum(playlistId, type) {
-        let uri = [];
-        const accessToken = localStorage.getItem("access_token");
-
-        const tracks = await getTracks(playlistId, type);
-
-        tracks.items.forEach((element) => {
-          if (type == "playlists") {
-            uri.push(element.track.uri);
-          } else {
-            uri.push(element.uri);
-          }
-        });
-
-        await playSong(uri);
-      }
-    </script>
   </body>
 </html>
