--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://*/ "
+    />
     <title>Spotify Chrome Extension</title>
-    <link rel="stylesheet" href="./styles/style.css" />
     <script type="module" src="./scripts/app.js"></script>
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/e2de3a3f6a.js"
       crossorigin="anonymous"
-    ></script>
+      data-auto-add-css="false"
+    ></script> -->
+    <link rel="stylesheet" href="./styles/all.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
   <body>
@@ -188,66 +194,5 @@
         </div>
       </div>
     </div>
-
-    <script>
-      async function playSong(uri) {
-        const accessToken = localStorage.getItem('access_token');
-
-        if (!Array.isArray(uri)) {
-          uri = [uri];
-        }
-
-        const response = await fetch(
-          'https://api.spotify.com/v1/me/player/play',
-          {
-            method: 'PUT',
-            body: JSON.stringify({
-              offset: {
-                position: 0,
-              },
-              uris: uri,
-            }),
-            headers: new Headers({
-              Authorization: 'Bearer ' + accessToken,
-            }),
-          }
-        );
-      }
-
-      // Get playlist tracks
-      async function getTracks(playlistId, type) {
-        const accessToken = localStorage.getItem('access_token');
-
-        const response = await fetch(
-          `https://api.spotify.com/v1/${
-            type == 'album' ? 'albums' : 'playlists'
-          }/${playlistId}/tracks`,
-          {
-            headers: {
-              Authorization: 'Bearer ' + accessToken,
-            },
-          }
-        );
-
-        return await response.json();
-      }
-
-      async function playAlbum(playlistId, type) {
-        let uri = [];
-        const accessToken = localStorage.getItem('access_token');
-
-        const tracks = await getTracks(playlistId, type);
-
-        tracks.items.forEach((element) => {
-          if (type == 'playlists') {
-            uri.push(element.track.uri);
-          } else {
-            uri.push(element.uri);
-          }
-        });
-
-        await playSong(uri);
-      }
-    </script>
   </body>
 </html>
